--- a/compose/exercises/cors/server/html/index.html
+++ b/compose/exercises/cors/server/html/index.html
@@ -1,4 +1,9 @@
 <html>
+	<head>
+		<title>Server</title>
+		<!-- Include jQuery from Google CDN -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	</head>
 	<body>
 		Welcome to server machine
 	</body>
