--- a/compose/exercises/cors/server/html/index.html
+++ b/compose/exercises/cors/server/html/index.html
@@ -4,7 +4,7 @@
 		<!-- Include jQuery from Google CDN -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<!-- Include javascript from our own machine -->
-		<script src="https://cors/min.js"></script>
+		<script src="http://localhost:8081/min.js"></script>
 	</head>
 	<body>
 		Welcome to server machine
