no commit message given

--- a/compose/exercises/cors/server/html/index.html
+++ b/compose/exercises/cors/server/html/index.html
@@ -5,6 +5,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<!-- Include javascript from our own machine -->
 		<script src="http://localhost:8081/min.js"></script>
+		<script src="http://newton:8081/min.js"></script>
+		<script src="http://172.19.0.2:80/min.js"></script>
 	</head>
 	<body>
 		Welcome to server machine
